--- a/proyectoClases2/pom.xml
+++ b/proyectoClases2/pom.xml
@@ -48,6 +48,12 @@
             <artifactId>spring-web</artifactId>
             <version>5.3.22</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-thymeleaf</artifactId>
+            <version>2.7.3</version>
+        </dependency>
+
     </dependencies>
 
     <build>
